@@ -4,9 +4,7 @@
 package de.uka.ilkd.key.scripts;
 
 import java.util.List;
-import java.util.Map;
 
-import de.uka.ilkd.key.control.AbstractUserInterfaceControl;
 import de.uka.ilkd.key.logic.JTerm;
 import de.uka.ilkd.key.logic.TermBuilder;
 import de.uka.ilkd.key.logic.op.ProgramVariable;
@@ -30,32 +28,25 @@ import org.key_project.logic.op.Function;
  *
  * @author Dominic Steinhoefel
  */
-public class SaveNewNameCommand extends AbstractCommand<SaveNewNameCommand.Parameters> {
+public class SaveNewNameCommand extends AbstractCommand {
     public SaveNewNameCommand() {
         super(Parameters.class);
     }
 
     @Override
-    public Parameters evaluateArguments(EngineState state, Map<String, Object> arguments)
-            throws Exception {
-        return state.getValueInjector().inject(this, new Parameters(), arguments);
-    }
-
-    @Override
-    public void execute(AbstractUserInterfaceControl uiControl, Parameters params,
-            EngineState stateMap) throws ScriptException, InterruptedException {
-
+    public void execute(ScriptCommandAst arguments) throws ScriptException, InterruptedException {
+        var params = state().getValueInjector().inject(new Parameters(), arguments);
         if (!params.abbreviation.startsWith("@")) {
             throw new ScriptException(
                 "Unexpected parameter to saveNewName, only @var allowed: " + params.abbreviation);
         }
 
-        final AbbrevMap abbrMap = stateMap.getAbbreviations();
+        final AbbrevMap abbrMap = state().getAbbreviations();
         final String key = params.abbreviation.substring(1);
         final String stringToMatch = params.matches;
 
         try {
-            final Goal goal = stateMap.getFirstOpenAutomaticGoal();
+            final Goal goal = state().getFirstOpenAutomaticGoal();
             final Node node = goal.node().parent();
             final List<String> matches =
                 node.getNameRecorder().getProposals().stream().map(Name::toString)
@@ -67,13 +58,14 @@ public class SaveNewNameCommand extends AbstractCommand<SaveNewNameCommand.Param
                         matches.size(), stringToMatch));
             }
 
-            final Named lookupResult = goal.getLocalNamespaces().lookup(new Name(matches.get(0)));
+            final Named lookupResult =
+                goal.getLocalNamespaces().lookup(new Name(matches.getFirst()));
 
             assert lookupResult != null;
 
             // Should be a function or program variable
             final TermBuilder tb = //
-                stateMap.getProof().getServices().getTermBuilder();
+                state().getProof().getServices().getTermBuilder();
             final JTerm t;
             if (lookupResult instanceof Function) {
                 t = tb.func((Function) lookupResult);
@@ -96,9 +88,9 @@ public class SaveNewNameCommand extends AbstractCommand<SaveNewNameCommand.Param
     }
 
     public static class Parameters {
-        @Option(value = "#2", required = true)
+        @Option(value = "#2")
         public String abbreviation;
-        @Option(value = "matches", required = true)
+        @Option(value = "matches")
         public String matches;
     }
 
